// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <A /> correctly 1`] = `
.jleQxG {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
}

<a
  className="sc-gqjmRU jleQxG"
/>
`;

exports[`renders <Abbr /> correctly 1`] = `


<abbr
  className="sc-VigVT ijOVMO"
/>
`;

exports[`renders <Article /> correctly 1`] = `
.fpcbkF {
  display: block;
}

<article
  className="sc-bdVaJa fpcbkF"
/>
`;

exports[`renders <Aside /> correctly 1`] = `
.gbieAY {
  display: block;
}

<aside
  className="sc-bwzfXH gbieAY"
/>
`;

exports[`renders <Audio /> correctly 1`] = `
.SYMpT {
  display: inline-block;
}

.SYMpT:not([controls]) {
  display: none;
  height: 0;
}

<audio
  className="sc-ckVGcZ SYMpT"
/>
`;

exports[`renders <B /> correctly 1`] = `
.vhpOG {
  font-weight: bolder;
}

<b
  className="sc-jTzLTM vhpOG"
/>
`;

exports[`renders <Button /> correctly 1`] = `
.efaqoE {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  -webkit-text-transform: none;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.efaqoE::-moz-focus-inner,
.efaqoE[type="button"]::-moz-focus-inner,
.efaqoE[type="reset"]::-moz-focus-inner,
.efaqoE[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.efaqoE:-moz-focusring,
.efaqoE[type="button"]:-moz-focusring,
.efaqoE[type="reset"]:-moz-focusring,
.efaqoE[type="submit"]:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

<button
  className="sc-kEYyzF efaqoE"
/>
`;

exports[`renders <Canvas /> correctly 1`] = `
.gIGqrW {
  display: inline-block;
}

<canvas
  className="sc-gPEVay gIGqrW"
/>
`;

exports[`renders <Code /> correctly 1`] = `
.NmzmU {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<code
  className="sc-jzJRlG NmzmU"
/>
`;

exports[`renders <Details /> correctly 1`] = `
.kSeyxS {
  display: block;
}

<details
  className="sc-cMljjf kSeyxS"
/>
`;

exports[`renders <Dfn /> correctly 1`] = `
.lcACZG {
  font-style: italic;
}

<dfn
  className="sc-chPdSV lcACZG"
/>
`;

exports[`renders <Fieldset /> correctly 1`] = `
.dLqrpE {
  padding: 0.35em 0.75em 0.625em;
}

<fieldset
  className="sc-cvbbAY dLqrpE"
/>
`;

exports[`renders <FigCaption /> correctly 1`] = `
.fGYiaS {
  display: block;
}

<figcaption
  className="sc-bZQynM fGYiaS"
/>
`;

exports[`renders <Figure /> correctly 1`] = `
.fpLcXm {
  display: block;
  margin: 1rem 2.5rem;
}

<figure
  className="sc-gzVnrw fpLcXm"
/>
`;

exports[`renders <Footer /> correctly 1`] = `
.dMAkQL {
  display: block;
}

<footer
  className="sc-htpNat dMAkQL"
/>
`;

exports[`renders <H1 /> correctly 1`] = `
.itlxbG {
  font-size: 2rem;
  margin: 0.625rem 0;
}

<h1
  className="sc-dnqmqq itlxbG"
/>
`;

exports[`renders <Header /> correctly 1`] = `
.imCjfa {
  display: block;
}

<header
  className="sc-bxivhb imCjfa"
/>
`;

exports[`renders <Hr /> correctly 1`] = `
.jvTISp {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

<hr
  className="sc-iwsKbI jvTISp"
/>
`;

exports[`renders <Img /> correctly 1`] = `
.gLFqHa {
  border-style: none;
}

<img
  className="sc-eNQAEJ gLFqHa"
/>
`;

exports[`renders <Input /> correctly 1`] = `
.gtmtGl {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
}

.gtmtGl::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

<input
  className="sc-kkGfuU gtmtGl"
/>
`;

exports[`renders <Kbd /> correctly 1`] = `
.cNQErp {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<kbd
  className="sc-cSHVUG cNQErp"
/>
`;

exports[`renders <Legend /> correctly 1`] = `
.iBvQlR {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

<legend
  className="sc-jWBwVP iBvQlR"
/>
`;

exports[`renders <Main /> correctly 1`] = `
.kGbKV {
  display: block;
}

<main
  className="sc-htoDjs kGbKV"
/>
`;

exports[`renders <Mark /> correctly 1`] = `
.gUcHXP {
  background-color: #ff0;
  color: #000;
}

<mark
  className="sc-kgoBCf gUcHXP"
/>
`;

exports[`renders <Menu /> correctly 1`] = `
.EtDOy {
  display: block;
}

<menu
  className="sc-jAaTju EtDOy"
/>
`;

exports[`renders <Nav /> correctly 1`] = `
.kXFzZl {
  display: block;
}

<nav
  className="sc-ifAKCX kXFzZl"
/>
`;

exports[`renders <Optgroup /> correctly 1`] = `
.bwvGAC {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

<optgroup
  className="sc-iAyFgw bwvGAC"
/>
`;

exports[`renders <Pre /> correctly 1`] = `
.ePyiae {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<pre
  className="sc-gZMcBi ePyiae"
/>
`;

exports[`renders <Progress /> correctly 1`] = `
.irOoVX {
  display: inline-block;
  vertical-align: baseline;
}

<progress
  className="sc-brqgnP irOoVX"
/>
`;

exports[`renders <Samp /> correctly 1`] = `
.brPjlW {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<samp
  className="sc-kAzzGY brPjlW"
/>
`;

exports[`renders <Section /> correctly 1`] = `
.kyfnqM {
  display: block;
}

<section
  className="sc-EHOje kyfnqM"
/>
`;

exports[`renders <Select /> correctly 1`] = `
.kskmSD {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  -webkit-text-transform: none;
  text-transform: none;
}

<select
  className="sc-hSdWYo kskmSD"
/>
`;

exports[`renders <Small /> correctly 1`] = `
.eNDzVi {
  font-size: 80%;
}

<small
  className="sc-kGXeez eNDzVi"
/>
`;

exports[`renders <Strong /> correctly 1`] = `
.liZvtt {
  font-weight: bolder;
}

<strong
  className="sc-fjdhpX liZvtt"
/>
`;

exports[`renders <Sub /> correctly 1`] = `
.bfYNTw {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
  bottom: -0.25em;
}

<sub
  className="sc-kpOJdX bfYNTw"
/>
`;

exports[`renders <Summary /> correctly 1`] = `
.chrtFK {
  display: list-item;
}

<summary
  className="sc-jDwBTQ chrtFK"
/>
`;

exports[`renders <Sup /> correctly 1`] = `
.hZcmXd {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
  top: -0.5em;
}

<sup
  className="sc-dxgOiQ hZcmXd"
/>
`;

exports[`renders <Svg /> correctly 1`] = `
.GnRoM:not(:root) {
  overflow: hidden;
}

<svg
  className="sc-hMqMXs GnRoM"
/>
`;

exports[`renders <Textarea /> correctly 1`] = `
.bDTEgL {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
}

<textarea
  className="sc-eHgmQL bDTEgL"
/>
`;

exports[`renders <Video /> correctly 1`] = `
.bkGlpl {
  display: inline-block;
}

<video
  className="sc-jKJlTe bkGlpl"
/>
`;
